Add compress decompress String via Streams